--- a/Lecture-Evaluation/src/main/webapp/index.html
+++ b/Lecture-Evaluation/src/main/webapp/index.html
@@ -28,7 +28,7 @@
     <body>	
    		<div class="header fixed-top">	
         <nav class="navbar navbar-expand-lg navbar-darkgray">	
-            <a class="navbar-brand" href="./app">강의평가 웹 사이트</a>	
+            <a class="navbar-brand" href="/Lecture-Evaluation/">강의평가 웹 사이트</a>	
             <button	
                 class="navbar-toggler"	
                 type="button"	
