--- a/Lecture-Evaluation/src/main/webapp/index.html
+++ b/Lecture-Evaluation/src/main/webapp/index.html
@@ -98,7 +98,7 @@
 
 
         			<p class="text-center">	
-        			<a class="btn button-custom" href="app/evaluation/form" role="button">참여</a>	
+        			<a class="btn button-custom" href="app/auth/form" role="button">참여</a>	
         			</p>	
 
 
